Fixes #1079:  icons in the inline editor are too small

--- a/components/inlineEditor/index.less
+++ b/components/inlineEditor/index.less
@@ -66,6 +66,7 @@
             border-right: 1px solid #1A98B8;
             border-bottom: 1px solid #1A98B8;
             color: @white;
+            font-size: 26px;
 
             &:active {
                 background: #32B2D2;
